[BUGFIX] Make all elements fully visible in the inspector
This change also fixes some issues when toggling preview mode, which
was broken in the collapsible inspector change.

Fixes: #47076
Original-Commit-Hash: bbb0c3bddf73a9b7c4e52176586f8c7c69f39430

--- a/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
+++ b/TYPO3.Neos/Resources/Public/StyleSheet/style.scss
@@ -286,6 +286,7 @@ body {
 	z-index: 10014;
 	border-top: 1px solid $green;
 	padding-top: 45px;
+	padding-bottom: $footer-height;
 	@include transition-property('right');
 	@include transition-duration(.2s);
 
@@ -912,7 +913,7 @@ body {
 			}
 		}
 		#t3-inspector {
-			width: 0;
+			right: -$property-panel-width;
 			overflow: hidden;
 		}
 		// Publish button
